# ChangeLog for sys-libs/timezone-data
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.271 2012/08/03 15:49:09 vapier Exp $

*timezone-data-2012e (03 Aug 2012)

  03 Aug 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012e.ebuild:
  Version bump.

*timezone-data-2012d (20 Jul 2012)

  20 Jul 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012d.ebuild:
  Version bump.

  16 May 2012; Mike Frysinger <vapier@gentoo.org> timezone-data-2012c.ebuild:
  Update HOMEPAGE/SRC_URI to include new IANA site #416311 by Larry Gilbert.

  27 Apr 2012; Mike Frysinger <vapier@gentoo.org> timezone-data-2012c.ebuild:
  Stabilize for everyone.

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> timezone-data-2012c.ebuild:
  keyword ~amd64-fbsd

*timezone-data-2012c (02 Apr 2012)

  02 Apr 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012c.ebuild:
  Version bump.

*timezone-data-2012b (02 Mar 2012)

  02 Mar 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012b.ebuild:
  Version bump.

*timezone-data-2012a (01 Mar 2012)

  01 Mar 2012; Mike Frysinger <vapier@gentoo.org> -timezone-data-2011d.ebuild,
  -timezone-data-2011e.ebuild, -timezone-data-2011g.ebuild,
  -timezone-data-2011h.ebuild, -timezone-data-2011i.ebuild,
  -timezone-data-2011j.ebuild, -timezone-data-2011k.ebuild,
  -timezone-data-2011l.ebuild, -timezone-data-2011m.ebuild,
  +timezone-data-2012a.ebuild, +files/timezone-data-2012a-makefile.patch:
  Version bump.

  01 Jan 2012; Mike Frysinger <vapier@gentoo.org> timezone-data-2011n.ebuild:
  Stabilize for everyone.

*timezone-data-2011n (31 Oct 2011)

  31 Oct 2011; Mike Frysinger <vapier@gentoo.org> +timezone-data-2011n.ebuild:
  Version bump.

*timezone-data-2011m (31 Oct 2011)

  31 Oct 2011; Mike Frysinger <vapier@gentoo.org> +timezone-data-2011m.ebuild:
  Version bump #389031 by Andriy Baranskyy.
