@@ -4,16 +4,19 @@ Hash: SHA256
 AUX timezone-data-2008h-makefile.patch 4037 SHA256 fc496b869ed6b70c60b0fcdea0a176e31c9405c96e6bf73b5edc26339de66c39 SHA512 85871ce688d529660ad8948ebf73918fdada5d950abbd9f33241d2d89e6df521223f7a1a24369c00b3f7258ce41bf296ee6f04cf2b91d0591d08640d06a6e4d6 WHIRLPOOL ade3e7e17318abf2e4989c4d673f643ebcbd787f26719c22ca0f90ba8b70d293c9f99334f6594fc1eaa2ef233539bed3ff0b5f20d9042b990f5ec4671432a8ee
 DIST tzcode2012b.tar.gz 135075 SHA256 4345a2de239a7b6e5ab286052cc269eb07d63798ae14ba715eb4c6bdfa0f3350 SHA512 12b60b6b00db51651a85e4448c8795c8f0d0fbeeec66bec4e8613dff41fec3324a0b20f7d66183541a389eff0d2a93b3346a045a58a0d977739924f06d017fd3 WHIRLPOOL 2a343f318b737a2b4e85f29416d25b07a04f3395a49c6e863a3bf4492b63de17545d30b0377ab4d1587fd0fc85ecf234fe2c45bff4bd2f0f97b33b82b3f2e3f0
 DIST tzcode2012e.tar.gz 135542 SHA256 bf0cb79e8419952ff4c6070394f6d45e809e3543b45944004962d4b4ee33a468 SHA512 68d32353c8e4b71c7f6f2a2950e6a3e46752de77e36f98ebdbf273dbffd3e1a6caa1f6a374253af9985ad8e529bae68590f0b99149d12c84b34c7aaf755ae82d WHIRLPOOL 45a626db0e634b533da7737b4d352b17e6b0973a059fbc76cea000e633cb37ad3e14ca4eae795f7711e9de3e19cacf978d13052ee2acf2831ec6bd3d65a0a633
+DIST tzcode2012f.tar.gz 135543 SHA256 f38a096ee1f6c6752946463fdeecf1f0bba422a3e5bdb2eff672d601407ad9d4 SHA512 65ee827e44fd2eb87237d9f83e66a5eb075d4af3635012753ffe952d52fa364c32743e4791a79394c08bd37a1561d9436b3d9f6cb316a4f998e7aafbb4fff06a WHIRLPOOL 61eeae5492a737d28f62e84e64372b65695d17de162a256a12381854e2e5db3ac714f9ccc5acd7f43c70a55edb07444419831e172f92d19f41238367e70d5ff8
 DIST tzdata2012c.tar.gz 206206 SHA256 33e19e1dd27bda5239812587d72971509a15b59baff7abd692b77ff66f168a82 SHA512 c43630f0bf1973b368229c788da90965d7c8b0d6dc8aa0f4bcbfac018a8c8291e1eb21cae05282df2eba6ec9a647c53c02fd92fea91fd5cb93855808387e52b9 WHIRLPOOL 119d8076a88287eb5063bd977aa63eaf918310e33b1d1f4fc60ad9ad72ed9b1d62918345e6f5786ca0ce6d5b938db1e33d05c0bdfdf70d1bd22a10ee825cf99d
 DIST tzdata2012e.tar.gz 206251 SHA256 061c1c289e792f3661135d5ec542e4f9417d3cd7f232f3d54c1949573aadd0fc SHA512 66ab7bcf7070a0a6d9ba2c5ef9d5c0f0992462fa43a09998a36c9a64049b10164fb6bf73d66ab5d2fbb90e07aa5e4e636221266a69b7590eccfcd6b1acffbd98 WHIRLPOOL 7f049e8012b50fee0818c00a50fa9e342afeda0cf6261d757c998b4d926490f6d766c7e755b7a6b46e0708fe60077afcafc3ca52d6e6b69a4b90e62ce6f934e0
+DIST tzdata2012f.tar.gz 206404 SHA256 afe95a49a445ee55391d2d4beccd4be6d61a090d5d8069c407390ff1502c26cc SHA512 b8db53f82967472c3aa191a04f0a97473d4331c72d03834749a0c8a9d9a934fb1285917e3f5b6fc7a166a39371913650501feb88ebfc40bc6a64e3393d0ead5d WHIRLPOOL 9239778259ba75002fd5e0fd4c16cf94e9b57f746f9267c054fea0fbe23b9890387ffb835579c8674ef85516f6deef75ef62b1e28d620504d866569bdf5e3dcb
 EBUILD timezone-data-2012c.ebuild 3365 SHA256 20e4f128ce5a2855b71557468e30ceba5e69018fca7edc095317e7b76bdc1bdf SHA512 a2acbf7aa15917ab05119c8a6e53b906dee0f4338bf68c5acb3f0126a2a5758b529591dc76d6cf5b947c8a4cd34ec03be107efa60ca3da8bb639b6a7953d8786 WHIRLPOOL 49de347220cf35272e37065d70a8888f85e2764085fb5a92c95c7c9ce4d00f0ea664e9c001c5dd26d4b742dbbe2dfa56ee2c6b23007e452804b15e38a873ea49
 EBUILD timezone-data-2012e.ebuild 3348 SHA256 53aa1e935869feb14a2b521bb81db940d85fadc426c8dd75e160438b74c20f12 SHA512 fde54ccd163047f41c56056666b3a57de9b5bdb6695469ede87c6fda7b2c00648e1fc67bf5c6ada1d054bc79e6a46e26bf62b69d07c9363f198527c25908da86 WHIRLPOOL 6312db2154fd10e37dc43b83d4cda5897ef0241e6fcd555b12e1ba5249972212a0344cb528cabfe045a68efc470dd5b84da92da851b0f7147ccb9faeca284c08
-MISC ChangeLog 35771 SHA256 ab5a45109c89dcdeec9682944886bbc6101a2732b756a522786eeba0fb9db5f5 SHA512 540df237f225ef4f61f373fcad3984ee3b0248149b8b1e6bfbc018ffbad9c0e584bb68eac1d29898e0a82a63949657b243c42a360e959fc7bbbe38b878df342f WHIRLPOOL 3c355906ce8157d48ded095108f650eee9ac3987be3118644ad3f02302ce4e2d6f8581083687815c5fe989f23293ceb5b483f5e85ee199540c85db723de03cf8
+EBUILD timezone-data-2012f.ebuild 3348 SHA256 a6274c3117c3194eed20ca1535b7c33c553381f880ff80172507a2888962d8c1 SHA512 6996f7284ca51277233667c6b5ab082480cc4b0095a3786683a44b0159c30b76838f1ec8bec1185d19dc5fd6236743ad7bb1e28dcc8c78292652a2251c583bc2 WHIRLPOOL 9708bca905be5d8dba3730294c925c06ff498bd676746df76e92d080c53f72816a59bc5a7e65bff2a974144a59b143d589f790914ea062403c714c4c039d78dc
+MISC ChangeLog 35903 SHA256 d7b87592bd2496d38d66a7a5c8ff1dde5b2629166baf4776be44086ac569dbbe SHA512 d758addeb9d4ed139f98f087eea30e13aa8ea79b5974779110629b09e11089c40e6f62f7bed9b00cce52576eb3e457ee75150d06bb62af372d7cf807a8ae2cd8 WHIRLPOOL ae2944dd7a6bf44f85dc676292c655c3da1ea3799f0f3067042f68a10d0d122533d2e94eeea36778b03abaccd5ecaae19fac056e74c0e033dea1b61638d6e726
 MISC metadata.xml 162 SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a SHA512 2a857e10b277827773a6c7967e070d7bfff23d75f44fa4d4fa8a7339df3225e6dba512a865d91c9c55bdb013dafdce85dface1b845acfbb5473e232666cdda45 WHIRLPOOL f7586c1570803b3e646f0be89ba6c767e82ec6889ef92d15f62a38f1410ed9d82c36892e5e83f694471959783d0d5ad667f1a39b7eb51f2080c269d5fa23d819
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (Darwin)
 
-iEYEAREIAAYFAlAmDqIACgkQX3X2B8XHTon/4QCfXr4tyeAQdssez9knBTDOH3UN
-lAkAn3TPOJC7NoWvpjKAMLzsLsj3leOr
-=l6dE
+iEYEAREIAAYFAlBpvagACgkQX3X2B8XHToldogCfY+1F/LXzUguRTQhU8TU0E2uB
+sAQAnjsdW5xWEsyCGLwIkT2w7Tk36qOb
+=eAfG
 -----END PGP SIGNATURE-----
