@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/timezone-data
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.271 2012/08/03 15:49:09 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.272 2012/09/13 17:29:51 vapier Exp $
+
+*timezone-data-2012f (13 Sep 2012)
+
+  13 Sep 2012; Mike Frysinger <vapier@gentoo.org> +timezone-data-2012f.ebuild:
+  Version bump.
 
 *timezone-data-2012e (03 Aug 2012)
 
